@@ -1,1 +1,1 @@
-agar.gui.widget.mpane agar-gui-widget-mpane.ads
+agar.gui.widget.mpane agar-gui-widget-mpane.ads agar-gui-widget-mpane.adb
