@@ -1,1 +1,1 @@
-agar.gui.widget.notebook agar-gui-widget-notebook.ads
+agar.gui.widget.notebook agar-gui-widget-notebook.ads agar-gui-widget-notebook.adb
